# fapi

./: README.md  fapi.py  pyproject.toml  requirements.txt  trash.txt  vastai_wisper.sh
